@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <compiler.version>1.8</compiler.version>
+        <compiler.version>11</compiler.version>
     </properties>
 
     <dependencies>
@@ -80,10 +80,18 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
+                <version>3.8.1</version>
+                <!--<configuration>
                     <source>${compiler.version}</source>
                     <target>${compiler.version}</target>
+                </configuration>-->
+                <configuration>
+                    <release>11</release>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                    <!--<forceJavacCompilerUse>true</forceJavacCompilerUse>-->
+                    <!--<parameters>true</parameters>-->
                 </configuration>
             </plugin>
 
